Fix smooth scroll on iOS
#436.

--- a/src/assets/sass/common.scss
+++ b/src/assets/sass/common.scss
@@ -156,3 +156,7 @@ input.dante-menu-input {
     line-height: 1.6;
   }
 }
+
+* {
+  -webkit-overflow-scrolling: touch;
+}
